# ipwatch

./: .gitignore  .goreleaser.yaml  BUILDING.md  README.md  README_ru.md  app.py  go.mod  ipwatch.py  main.go  pyproject.toml  spec.md
.github/workflows/: release.yml
